Debugged dictionary word search functionality. Ditched array_intersect() method in favor of array_search, array_push(), and unset(). It's more complex but avoids duplicates. Added creation of $tempInputStringArray within the $words as $word foreach loop in order to avoid mutation of the $inputStringArray between iterations. Used array_unshift() to prepend a 'junk' value to the 0 key in $inputStringArray, which was necessary to troubleshoot a bug whereby the first value and all identical values throughout the array were ignored in the matching comparison. Switched dictionaries to an alpha-only dictionary to reduce the amount of 'junk' words returned by search results. Modified word Blade template to display match results in a more attractive/logical fashion. To do: implement functionality for the checkbox and selections (checkbox will be changed to some other option than special characters--possibly the option to allow unlimited usage of each character in the $inputString), implement error messages/user feedback, and thoroughly debug the app to make sure there are no lingering errors.

--- a/p2/public/css/word.css
+++ b/p2/public/css/word.css
@@ -48,3 +48,9 @@ html, body {
 .m-b-md {
     margin-bottom: 30px;
 }
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
